+pcbnew
  * drc.cpp and dialog_drc.cpp update.
    Added double click support on a MARKER or unconnected DRC_ITEM in the listboxes.
    On Linux, it sometimes pops up the menu from PcbGeneralLocateAndDisplay()
    for some reason after repositioning the cursor.  That is not intended, but 
    after several attempts to work around it, I realized it is not so bad to 
    have this happen.
  * Added WinEDA_BasePcbFrame::CursorGoto( const wxPoint& ) by factoring it
    out of pcbnew/find.cpp
    Almost done now, its ready for folks to start using it and testing it.

    
2007-Dec-02 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    Solved an annotation problem: in multiple parts per package components,
	when sorted by position, parts were not grouped by package.


2007-Dec-2 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    drc.cpp and dialog_drc.cpp intermediate update.
    

2007-Nov-30 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * added virtual GetPosition() to BOARD_ITEM and derivatives.
  * added classes DRC, REPORT_ISSUE, DRC_ITEM and rearranged drc.cpp entirely
    to comprize the DRC class.  The result has finer granularity of functions
    and each is fairly well documented in English, see drc_stuff.h.
    Keeping old stuff commented out at bottom of drc.cpp until some more usage 
    and testing is done.
  * Made the DRC dialog modeless, so it can sit off to the side while the MARKER
    are inspected one by one.

    
2007-Nov-29 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    Removed a bug (function block() ) which crashes pcbnew when erasing a zone by block delete

